# emailtriage

./: .gitignore  Dockerfile  README.md  app.py  baseline_results.json  inference.py  pyproject.toml
email-triage-env/: .gitignore  00_READ_ME_FIRST.md  API_KEY_READY.md  API_KEY_SETUP.md  COMPLETION_REPORT.md  Dockerfile  IMPLEMENTATION.md  PROJECT_SUMMARY.md  QUICKREF.md  README.md  SETUP_STATUS.md  START_HERE.md  SUCCESS.md  TESTING.md  WHATS_INCLUDED.md  WINDOWS_SETUP.md  examples.py  hf_spaces_app.py  openenv.yaml  requirements.txt  setup.py
email-triage-env/email_triage/: __init__.py  environment.py  models.py  openenv_spec.py
email-triage-env/email_triage/tasks/: __init__.py  base_task.py  implementations.py
email-triage-env/scripts/: baseline_inference.py  rl_agent.py  test_environment.py
server/: app.py
